--- a/Profile/index.html
+++ b/Profile/index.html
@@ -34,7 +34,7 @@
 
 		<div class="secondary-fields">
 			<B>Secret Question: </B>
-			<select name="SecretQuestion">
+			<select id="SecretQuestion">
 				<option disabled selected value value="none">-- Select a question --</option>
 				<option value="Pet Question">What is your pet's name?</option>
 				<option value="First Car">What was your first car?</option>
