--- a/NearbyArrivals/index.html
+++ b/NearbyArrivals/index.html
@@ -2,11 +2,29 @@
 <html>
 <head>
 	<title>Nearby Arrivals</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+	<div id="header">
+	<h1>Nearby Arrivals</h1>
+	</div>
+	<div id="container">
 
-	<div id="MainMap" style="width:100%;height:500px">
+		<div id="container_left">
+			<div id="col1">
+				
+			</div>
+			<div id="col2"></div>
+		</div>
+
+
+	</div>
+	<div id="MainMap" style="">
 		
+	</div>
+
+	<div id="StopList">
+		<p>Hello</p>
 	</div>
 
 	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
