--- a/NearbyArrivals/index.html
+++ b/NearbyArrivals/index.html
@@ -27,7 +27,7 @@
 		<p></p>
 	</div>
 
-	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
+	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDHwXmB8JRd36LSCnAS32gE5cOpr9jcO2g"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 </body>
